# KartennGenerator

./: .gitignore  CMakeLists.txt  KartennGenerator  Makefile  README.md  config.json  install.sh  model_simp.xml  test.xml
cmake/: Dependencies.cmake
data/: getMaps.sh
data/finistere/: finistere.xml  finistere_postgis.xml
data/world/: world.xml
include/: ConfigLoader.hpp  KartennGenerator.hpp  OhMyBHZGenerator.hpp  Tools.hpp
src/: ConfigLoader.cpp  KartennGenerator.cpp  Tools.cpp  main.cpp
